--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@opensea/seaport-js": "2.0.4",
     "api": "^6.1.0",
     "async-mutex": "^0.4.0",
+    "bignumber.js": "^9.1.2",
     "commander": "^7.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
